Fix that generated maven project can compile even jdk.jfr classes